now we can print QRcode in edit page and category page when click on description

--- a/flask/app/templates/category.html
+++ b/flask/app/templates/category.html
@@ -112,7 +112,7 @@
                     <div class="row">
                         <div class="item-actions">
                             <details class="detail">
-                                <summary onclick="loadQrCode(${it.itemID}, this)">Description</summary>
+                                <summary onclick="loadQrCode(${it.itemID}, this)">Detail</summary>
                                 <div class="description-content">
                                     ${it.itemDesc || 'No description available.'}
                                     <div id="qr-placeholder-${it.itemID}"></div>
