--- a/flask/app/templates/setting.html
+++ b/flask/app/templates/setting.html
@@ -71,8 +71,8 @@
 
     const logoutButton = document.querySelector('#logout')
     logoutButton.addEventListener("click", (event) => {
-        event.preventDefault();
-        confirmAction();
+        // event.preventDefault();
+        
     });
 </script>
 
