--- a/flask/app/static/css/cart.css
+++ b/flask/app/static/css/cart.css
@@ -23,8 +23,9 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
+    padding: 0;
     /* font-family: 'Pridi', serif; */
-    font-family: 'Inter', sans-serif;
+    font-family: 'Arial', sans-serif;
   }
 
 .top-bar{
@@ -32,7 +33,6 @@ body {
     padding: 20px;
     justify-content: space-between;
     border-bottom: 2px solid var(--border--color);
-    margin-bottom: 2%;
 }
 
 .top-bar span{
