--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="../templates/js/darkmode.js" defer></script>
     <title>Home page</title>
 </head>
-<body class="lightmode">
+<body class="lightmode en">
     <div class="top-bar">
         <div class="profile-wrapper">
             <div class="profile-circle">
@@ -25,7 +25,7 @@
                 {% endif %}
             </div>
             <div class="profile-text">
-                <span class="welcome-message">{% if Lang == "TH" %}ยินดีต้อนรับ{% else %}Welcome!{% endif %}<br></span>
+                <span class="welcome-message">Welcome!<br></span>
                 <span>{{ current_user.Fname}} {{ current_user.Lname }}</span>
             </div>
         </div>
@@ -53,14 +53,14 @@
             <button onclick="urlFor('statistic')" class="circle-button circle-button-lightmode">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M80-120v-80h800v80H80Zm40-120v-280h120v280H120Zm200 0v-480h120v480H320Zm200 0v-360h120v360H520Zm200 0v-600h120v600H720Z"/></svg>
             </button>
-            <span>{% if Lang == "TH" %}สถิติ{% else %}Statistics{% endif %}</span>
+            <span>Statistics</span>
         </div>
         
         <div class="category">
             <button onclick="urlFor('history')" class="circle-button circle-button-lightmode">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-120q-138 0-240.5-91.5T122-440h82q14 104 92.5 172T480-200q117 0 198.5-81.5T760-480q0-117-81.5-198.5T480-760q-69 0-129 32t-101 88h110v80H120v-240h80v94q51-64 124.5-99T480-840q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480q0 75-28.5 140.5t-77 114q-48.5 48.5-114 77T480-120Zm112-192L440-464v-216h80v184l128 128-56 56Z"/></svg>
             </button>
-            <span>{% if Lang == "TH" %}ประวัติ{% else %}History{% endif %}</span>
+            <span>History</span>
         </div>
         
 
@@ -68,19 +68,19 @@
             <button onclick="urlFor('newitem')" class="circle-button circle-button-lightmode">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z"/></svg>
             </button>
-            <span>{% if Lang == "TH" %}เพิ่ม{% else %}Add{% endif %}</span>
+            <span>Add</span>
         </div>
 
         <div class="category"> 
             <button onclick="urlFor('setting')" class="circle-button circle-button-lightmode">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="m370-80-16-128q-13-5-24.5-12T307-235l-119 50L78-375l103-78q-1-7-1-13.5v-27q0-6.5 1-13.5L78-585l110-190 119 50q11-8 23-15t24-12l16-128h220l16 128q13 5 24.5 12t22.5 15l119-50 110 190-103 78q1 7 1 13.5v27q0 6.5-2 13.5l103 78-110 190-118-50q-11 8-23 15t-24 12L590-80H370Zm112-260q58 0 99-41t41-99q0-58-41-99t-99-41q-59 0-99.5 41T342-480q0 58 40.5 99t99.5 41Z"/></svg>
             </button>
-            <span>{% if Lang == "TH" %}ตั้งค่า{% else %}Settings{% endif %}</span>
+            <span>Settings</span>
         </div>
     </div>
 
     <div class="topfive">
-        <span>{% if Lang == "TH" %}ของที่ถูกเบิกบ่อย 5 อันดับแรก{% else %}Top 5 Disbursemented Items{% endif %}</span>
+        <span>Top 5 Disbursemented Items</span>
     </div>
 
     <div class="topused-container">
@@ -116,7 +116,7 @@
             </div>
             {% endfor %}
         {% else %}
-            <p class="text-center text">{% if Lang == "TH" %}ยังไม่มีข้อมูล ณ ขณะนี้{% else %}No data yet.{% endif %}</p>
+            <p class="text-center text">No data yet</p>
         {% endif %}
     </div>
 
@@ -132,7 +132,7 @@
         </a>
 
         <div class="nav-item">
-            {#{% if current_user.IsM_admin %}#}
+            {% if current_user.IsM_admin %}
                 <a href="{{ url_for('adminlist') }}">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
                         <path d="M720-400v-120H600v-80h120v-120h80v120h120v80H800v120h-80Zm-360-80q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM40-160v-112q0-34 17.5-62.5T104-378q62-31 126-46.5T360-440q66 0 130 15.5T616-378q29 15 46.5 43.5T680-272v112H40Z"/>
@@ -145,18 +145,21 @@
                         <path d="M720-400v-120H600v-80h120v-120h80v120h120v80H800v120h-80Zm-360-80q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM40-160v-112q0-34 17.5-62.5T104-378q62-31 126-46.5T360-440q66 0 130 15.5T616-378q29 15 46.5 43.5T680-272v112H40Z"/>
                     </svg>
                 </a>
-                <span class="action3">{% if Lang == "TH" %}ช่องทางติดต่อแอดมิน{% else %}Admin Contact{% endif %}</span> -->
-            {#{% endif %}#}
+                <span class="action3">Admin Contact</span>
+            {% endif %}
         </div>
     </div>
-    
-    <div id="qr-container">
-        <div id="reader"></div>
-        <button id="close-btn" onclick="closeScanner()">ปิดกล้อง</button>
-    </div>
+    <script src="../templates/js/language.js"></script>    
+
+    <script>
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("{{ url_for('static', filename='service-worker.js') }}")
+        .then(reg => console.log("Service Worker registered", reg))
+        .catch(err => console.error("SW registration failed", err));
+        }
+    </script>
 </body>
 </html>
-
 <script>
     let darkmode = localStorage.getItem('darkmode');
     const themeSwitch = document.getElementById('theme-switch');
@@ -184,70 +187,4 @@
         darkmode = localStorage.getItem('darkmode')
         darkmode !== "active" ? enableDarkmode() : disableDarkmode()
     })
-
-    const logoutButton = document.querySelector('#logout')
-    logoutButton.addEventListener("click", (event) => {
-        event.preventDefault();
-        window.location.href = "logout";
-    });
-
-    let html5QrCode;
-
-    function openScanner() {
-      document.getElementById("qr-container").style.display = "flex";
-      html5QrCode = new Html5Qrcode("reader");
-
-      html5QrCode.start(
-        { facingMode: "environment" },
-        { fps: 10 },
-        qrCodeMessage => {
-          console.log(`QR Code detected: ${qrCodeMessage}`);
-          html5QrCode.stop().then(() => {
-            window.location.href = qrCodeMessage; 
-          });
-        },
-        errorMessage => {
-          // console.log(`QR scan error: ${errorMessage}`);
-        }
-      );
-    }
-
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("{{ url_for('static', filename='service-worker.js') }}")
-        .then(reg => console.log("Service Worker registered", reg))
-        .catch(err => console.error("SW registration failed", err));
-        }
-        
-    function closeScanner() {
-      if (html5QrCode) {
-        html5QrCode.stop().then(() => {
-          document.getElementById("qr-container").style.display = "none";
-        });
-      }
-    }
-
-    function urlFor(link) {
-        location.href = '/' + link;
-    }
-    
-    const translations = {
-        en: {
-            notAllow: "Not Allowed!",
-            desc1: "You do not have permission to do such action.",
-            desc2: "You are not Main_admin, please contact {{ pman.Fname }} {{ pman.Lname }}."
-        },
-        th: {
-            notAllow: "ไม่ได้รับอนุญาต",
-            desc1: "คุณไม่ได้รับสิทธิ์ในการเข้าถึงหน้านี้",
-            desc2: "คุณไม่ใช่แอดมินหลัก โปรดติดต่อ {{ pman.Fname }} {{ pman.Lname }}"
-        }
-    };
-
-    function changeLanguage(lang) {
-        document.querySelector('#notAllowed').textContent = (translations[lang].notAllow);
-        document.querySelector('#desc1').textContent = (translations[lang].desc1);
-        document.querySelector('#desc2').textContent = (translations[lang].desc2);
-    }
-
-    changeLanguage(localStorage.getItem('lang'));
 </script>
