--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -187,4 +187,8 @@
         darkmode = localStorage.getItem('darkmode')
         darkmode !== "active" ? enableDarkmode() : disableDarkmode()
     })
+    
+    function urlFor(link) {
+        location.href = '/' + link;
+    }
 </script>
