--- a/flask/app/templates/notification.html
+++ b/flask/app/templates/notification.html
@@ -13,6 +13,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script>
+        const darkmode = localStorage.getItem('darkmode');
+        if(darkmode === 'active') {
+          document.body.classList.add('darkmode');
+        } else {
+          document.body.classList.remove('darkmode');
+        }
+    </script>
     <div class="top-bar">
         <a href="{{ url_for('homepage') }}" class="back-arrow">
             <i class="material-icons">arrow_back_ios</i>
